--- a/planningandacquiring/templates/planningandacquiring/add_K9.html
+++ b/planningandacquiring/templates/planningandacquiring/add_K9.html
@@ -1,41 +1,57 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Add K9 Form</title>
-</head>
-<body>
+{% extends "profiles/sidebar_pa.html" %} {% block content %}
 
-<form action="{% url 'planningandacquiring:add_K9_form' %}" method="post">
+
+<h1 class="ui header">
+  Add K9 Form
+  <div class="sub header">Input K9 data here</div>
+</h1>
+<div class="ui inverted segment">
+<form class = "ui inverted form" action="{% url 'planningandacquiring:add_K9_form' %}" method="post">
 
     {% csrf_token %}
 
-<table>
-<thead>
-            <tr>
-                <th>Serial Number</th>
-                <th>Name</th>
-                <th>Breed</th>
-                <th>Sex</th>
-                <th>Color</th>
-                <th>Birthdate</th>
-                <th>Microchip</th>
-            </tr>
-            </thead>
-      <tbody>
-            <tr>
-              <td> {{form.serial_number}}</td>
-                <td>{{form.name}}</td>
-               <td> {{form.breed}}</td>
-               <td> {{form.sex}}</td>
-                <td>{{form.color}}</td>
-                <td>{{form.birth_date}}</td>
-                <td>{{form.microchip}}</td>
-            </tr>
-         </tbody>
-</table>
-    <button type="submit" onclick="return confirm('Are you sure?')">Submit</button>
-</form>
-</body>
 
-</html>
+    <div class="fields">
+    <div class="six wide field">
+    <label>Serial Number</label>
+        {{form.serial_number}}
+    </div>
+    <div class="twelve wide field">
+    <label>Name</label>
+        {{form.name}}
+    </div>
+    </div>
+
+
+    <div class="fields">
+    <div class="eight wide field">
+    <label>Breed</label>
+        {{form.breed}}
+    </div>
+    <div class="four wide field">
+    <label>Sex</label>
+        {{form.sex}}
+     </div>
+    <div class="four wide field">
+    <label>Color</label>
+        {{form.color}}
+    </div>
+    </div>
+
+    <div class="four wide field">
+    <label>Birthdate</label>
+        {{form.birth_date}}
+  </div>
+
+    <div class="four wide field">
+    <label>Microchip</label>
+        {{form.microchip}}
+  </div>
+
+
+
+    <button class = "ui button green" type="submit" onclick="return confirm('Are you sure?')">Submit</button>
+</form>
+</div>
+
+{% endblock %}
