--- a/profiles/templates/profiles/dashboard.html
+++ b/profiles/templates/profiles/dashboard.html
@@ -1,8 +1,9 @@
 {% extends "profiles/global-base-ui/sidebar_menu.html" %} 
 
 {% block dashboard %}
-<div class="ui fluid container">
+<div class="ui container">
     <h1>Welcome to the Dashboard</h1>
+
 </div>
 
 {% endblock%}
