--- a/profiles/templates/profiles/global-base-ui/global_base_ui.html
+++ b/profiles/templates/profiles/global-base-ui/global_base_ui.html
@@ -7,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>K9 Coast Guard</title>
 
+    <link rel="icon" href="{% static 'images/k9_logo.png' %}">
     <link rel="stylesheet" href="{% static 'semantic/semantic.min.css' %}">
     <link rel="stylesheet" href="{% static 'custom/custom_style.css' %}">
 </head>
@@ -14,12 +15,45 @@
     <!--START OF TOP MENU-->
     <div class="ui inverted top attached menu">
         <a class="item" style="width: 175px;"><i class="sidebar icon"></i>Menu</a>
+        <div class="right menu">
+             
+            <div class="topdiv">
+                <img src="{% static 'images/k9_logo.png' %}" height="18" width="18" style="margin-right: 5px;">
+                <p class="topmenu">PHILIPPINE K9 COAST GUARD</p>
+            </div>
+            
+        </div>
     </div>
      <!--END OF TOP MENU-->
 
     <!--sidebar_menu.html-->
     {% block sidebar %}
     {% endblock%}
+    <style>
+            .topmenu{
+                color:orangered;
+                display: block;
+                font-family: 'Lato', 'Helvetica Neue', Arial, Helvetica, sans-serif;
+                display: list-item;
+                table-layout: fixed;
+                background-color: transparent;
+                list-style-type: none;
+                list-style-position: outside;
+                line-height: 1.14285714em;
+                font-weight: bold;
+            }
+          
+            .topdiv{
+                display: flex; 
+                flex-wrap: wrap;
+                justify-content: center;
+                border: 5px;
+                padding: 10px;
+                border-left: 1px solid #262626;
+            }
+          
+            
+            </style>
 
 </body>
     
