working inventory forms

--- a/profiles/templates/profiles/register.html
+++ b/profiles/templates/profiles/register.html
@@ -15,6 +15,7 @@
         <div class="ui top attached menu">
             <div class="right menu">
                 <a class="ui item" href="{% url 'profiles:register'%}" style="font-weight: bold;">SIGN-UP</a>
+                <a class="ui item" href="{% url 'profiles:login'%}" style="font-weight: bold;">LOGIN</a>
             </div>
         </div>
      <!--END OF TOP MENU-->
