--- a/profiles/templates/profiles/login.html
+++ b/profiles/templates/profiles/login.html
@@ -14,6 +14,7 @@
     <!--START OF TOP MENU-->
         <div class="ui top attached menu">
             <div class="right menu">
+                <a class="ui item" href="{% url 'profiles:register'%}" style="font-weight: bold;">SIGN-UP</a>
                 <a class="ui item" href="{% url 'profiles:login'%}" style="font-weight: bold;">LOGIN</a>
             </div>
         </div>
