--- a/inventory/templates/inventory/medicine_list.html
+++ b/inventory/templates/inventory/medicine_list.html
@@ -1,7 +1,39 @@
 {% extends "profiles/sidebar_inventory.html" %}  
 
 {% block content %}
-<div class="ui fluid container">
-        <h1>Medicine List</h1>
-</div>
-{% endblock%}
+<h3 class="ui header">{{ title }}</h3>
+<table id="tabledata" class="ui celled table responsive nowrap" style="width:100%">
+    <thead>
+        <tr>
+            <th>Medicine</th>
+            <th>Dose</th>
+            <th>Description</th>
+            <th></th>
+        </tr>
+    </thead>
+        <tbody>
+            {% for data in data %}
+            <tr>
+                <td style="width:300px;" >{{ data.medicine }}</td>
+                <td style="width:100px;">{{ data.dosage }}</td>
+                <td>{{ data.description }}</td>
+                <td class="center aligned" style="width:100px;">
+                    <a href="#" style="margin-right:10px;">
+                        <i class="blue edit icon"></i>
+                    </a>
+                    <a onclick="return confirm('Are you sure?')" class = "button"   href="{% url 'inventory:medicine_delete' data.id %}">
+                        <i class="red trash alternate icon"></i>
+                    </a>
+                           
+                </td>       
+            </tr>
+            {% endfor %}
+        </tbody>
+    </table>
+    <script type="text/javascript">
+               
+        $(document).ready(function() {
+	        $('#tabledata').DataTable();
+        } );
+    </script>
+ {% endblock %}
