--- a/profiles/templates/profiles/global-base-ui/global_base_ui.html
+++ b/profiles/templates/profiles/global-base-ui/global_base_ui.html
@@ -7,9 +7,19 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>K9 Coast Guard</title>
 
-    <link rel="icon" href="{% static 'images/k9_logo.png' %}">
-    <link rel="stylesheet" href="{% static 'semantic/semantic.min.css' %}">
-    <link rel="stylesheet" href="{% static 'custom/custom_style.css' %}">
+   
+    <!-- <script src="{% static 'custome/custom_jquery.js' %}"></script> -->
+    <script src="{% static 'DataTables/jquery-1.12.4.min.js' %}"></script>
+    <script src="{% static 'js/jquery-3.2.1.min.js' %}"></script>
+    <script src="{% static 'js/jquery.formset.js' %}"></script>
+    <script src="{% static 'semantic/semantic.min.js' %}"></script>
+    <script src="{% static 'DataTables/datatables.min.js' %}"></script>
+
+     <!-- <link rel="stylesheet" href="{% static 'custom/custom_style.css' %}"> -->
+     <link rel="icon" href="{% static 'images/k9_logo.png' %}">
+     <link rel="stylesheet" href="{% static 'semantic/semantic.min.css' %}">
+     <link rel="stylesheet" href="{% static 'DataTables/datatables.min.css' %}">
+     
 </head>
 <body>
     <!--START OF TOP MENU-->
@@ -52,17 +62,32 @@
                 border-left: 1px solid #262626;
             }
           
-            
+            .submenu{
+                color: #666666;
+                display: block;
+                font-family: 'Lato', 'Helvetica Neue', Arial, Helvetica, sans-serif;
+                display: list-item;
+                table-layout: fixed;
+                background-color: transparent;
+                list-style-type: none;
+                list-style-position: outside;
+                line-height: 1.14285714em;
+                table-layout: fixed;
+            }
+            .submenu:hover{
+                color: black;
+            }
+            .subdiv{
+                display: flex; 
+                padding: 8px;  
+                flex-wrap: wrap;
+                justify-content: space-between;
+                table-layout: fixed;
+            }
             </style>
 
 </body>
-    
-    <script src="{% static 'js/jquery-3.2.1.min.js' %}"></script>
-    <script src="{% static 'js/jquery.formset.js' %}"></script>
-    <script src="{% static 'semantic/semantic.min.js' %}"></script>
-    <script src="{% static 'custome/custom_jquery.js' %}"></script>
-
-      
+  
     {% block script%}
     {% endblock%}
 
