--- a/inventory/templates/inventory/equipment_list.html
+++ b/inventory/templates/inventory/equipment_list.html
@@ -13,8 +13,8 @@
 <table id="tabledata" class="ui celled table responsive nowrap" style="width:100%">
     <thead>
         <tr>
-            <th>Medicine</th>
-            <th>Dose</th>
+            <th>Equipment</th>
+            <th>Quantity</th>
             <th>Description</th>
             <th></th>
         </tr>
@@ -22,14 +22,14 @@
         <tbody>
             {% for data in data %}
             <tr>
-                <td style="width:300px;" >{{ data.medicine }}</td>
-                <td style="width:100px;">{{ data.dosage }}</td>
+                <td style="width:300px;" >{{ data.equipment }}</td>
+                <td style="width:100px;">{{ data.quantity }}</td>
                 <td>{{ data.description }}</td>
                 <td class="center aligned" style="width:100px;">
                     <a href="#" style="margin-right:10px;">
                         <i class="blue edit icon"></i>
                     </a>
-                    <a onclick="return confirm('Are you sure?')" class = "button"   href="{% url 'inventory:medicine_delete' data.id %}">
+                    <a onclick="return confirm('Are you sure?')" class = "button"   href="{% url 'inventory:equipment_delete' data.id %}">
                         <i class="red trash alternate icon"></i>
                     </a>
                            
@@ -42,9 +42,9 @@
                
         $(document).ready(function() {
 	        $('#tabledata').DataTable();
-            //  $(function() {
+            // $(function() {
             //     $( ".message" ).slideUp( 4000, function() {
-            //         // Animation complete.
+                   
             //     });
             // });
         } );
