--- a/profiles/templates/profiles/global-base-ui/sidebar_menu.html
+++ b/profiles/templates/profiles/global-base-ui/sidebar_menu.html
@@ -5,10 +5,10 @@
         <div class="ui inverted labeled icon left inline vertical sidebar menu" id = "sidebar"style="">
             <a class="item" href="{% url 'profiles:profile'%}"><i class="user circle icon"></i>Profile</a>
             <a class="item" href="{% url 'profiles:dashboard'%}"><i class="chart line icon"></i>Dashboard</a>
-            <a class="item" href="{% url 'planningandacquiring:index'%}"><i class="clipboard list icon"></i>Planning and Acquiring</a>
+            <a class="item" href="{% url 'planningandacquiring:add_K9_form'%}"><i class="clipboard list icon"></i>Planning and Acquiring</a>
             <a class="item" href="{% url 'training:index'%}"><i class="bell icon"></i>Training</a>
             <a class="item" href="{% url 'deployment:index'%}"><i class="shipping fast icon"></i>Deployment</a>
-            <a class="item" href="{% url 'inventory:index'%}"><i class="boxes icon"></i>Inventory</a>
+            <a class="item" href="{% url 'inventory:medicine_add'%}"><i class="boxes icon"></i>Inventory</a>
             <a class="item" href="{% url 'unitmanagement:index'%}"><i class="folder open icon"></i>Unit Management</a>
             <a class="item" href="{% url 'profiles:login'%}">Logout</a>
         </div>
