--- a/profiles/templates/profiles/sidebar_um.html
+++ b/profiles/templates/profiles/sidebar_um.html
@@ -7,10 +7,10 @@
               <div class="ui fluid container">
                     <div class="ui grid">
                         <div class="three wide column">
-                                <div class="ui pointing vertical menu">
+                                <div class="ui pointing vertical menu" style="width:200px;">
                                     <div class = "subdiv">
-                                            <a class = "submenu" href="#">Unit Management</a>
-                                            <i class="bell icon "></i>
+                                            <a class = "submenu" href="#"  style="font-weight:bold;color:black;font-size:15px;">Unit Management Menu</a>
+                                           
                                     </div>
                                     <div class = "subdiv">
                                             <a class = "submenu" href="#">Subsection 1</a>
