--- a/inventory/templates/inventory/equipment_inventory_list.html
+++ b/inventory/templates/inventory/equipment_inventory_list.html
@@ -13,26 +13,20 @@
 <table id="tabledata" class="ui celled table responsive nowrap" style="width:100%">
     <thead>
         <tr>
-            <th>Medicine</th>
-            <th>Dose</th>
-            <th>Description</th>
+            <th>Equipment</th>
+            <th>Qauntity</th>
             <th></th>
         </tr>
     </thead>
         <tbody>
             {% for data in data %}
             <tr>
-                <td style="width:300px;" >{{ data.medicine }}</td>
-                <td style="width:100px;">{{ data.dosage }}</td>
-                <td>{{ data.description }}</td>
+                <td style="width:500px;" >{{ data.equipment }}</td>
+                <td>{{ data.quantity }}</td>
                 <td class="center aligned" style="width:100px;">
-                    <a style="margin-right:10px;" href="{% url 'inventory:medicine_edit' data.id %}">
-                        <i class="blue edit icon"></i>
+                    <a href="#" style="margin-right:10px;">
+                        <i class="teal list ol icon"></i>
                     </a>
-                    <a onclick="return confirm('Are you sure?')" class = "button"   href="{% url 'inventory:medicine_delete' data.id %}">
-                        <i class="red trash alternate icon"></i>
-                    </a>
-                           
                 </td>       
             </tr>
             {% endfor %}
@@ -42,9 +36,9 @@
                
         $(document).ready(function() {
 	        $('#tabledata').DataTable();
-            //  $(function() {
+            // $(function() {
             //     $( ".message" ).slideUp( 4000, function() {
-            //         // Animation complete.
+                   
             //     });
             // });
         } );
