--- a/inventory/templates/inventory/medicine_inventory_list.html
+++ b/inventory/templates/inventory/medicine_inventory_list.html
@@ -15,24 +15,22 @@
         <tr>
             <th>Medicine</th>
             <th>Dose</th>
-            <th>Description</th>
+            <th>Qauntity</th>
             <th></th>
         </tr>
     </thead>
         <tbody>
             {% for data in data %}
             <tr>
-                <td style="width:300px;" >{{ data.medicine }}</td>
-                <td style="width:100px;">{{ data.dosage }}</td>
-                <td>{{ data.description }}</td>
+                <td style="width:500px;" >
+                    <a href="{% url 'inventory:medicine_inventory_count' {{ data.id }} %}"> {{ data.medicine }}</a>
+                </td>
+                <td>{{ data.medicine.dosage }}</td>
+                <td>{{ data.quantity }}</td>
                 <td class="center aligned" style="width:100px;">
-                    <a style="margin-right:10px;" href="{% url 'inventory:medicine_edit' data.id %}">
-                        <i class="blue edit icon"></i>
+                    <a href="#" style="margin-right:10px;">
+                        <i class="teal list ol icon"></i>
                     </a>
-                    <a onclick="return confirm('Are you sure?')" class = "button"   href="{% url 'inventory:medicine_delete' data.id %}">
-                        <i class="red trash alternate icon"></i>
-                    </a>
-                           
                 </td>       
             </tr>
             {% endfor %}
@@ -42,9 +40,9 @@
                
         $(document).ready(function() {
 	        $('#tabledata').DataTable();
-            //  $(function() {
+            // $(function() {
             //     $( ".message" ).slideUp( 4000, function() {
-            //         // Animation complete.
+                   
             //     });
             // });
         } );
