--- a/profiles/templates/profiles/sidebar_inventory.html
+++ b/profiles/templates/profiles/sidebar_inventory.html
@@ -7,7 +7,7 @@
               <div class="ui fluid container">
                     <div class="ui grid">
                         <div class="three wide column">
-                                <div class="ui pointing vertical menu" style="width:200px;">
+                                <div class="ui pointing vertical menu" style="width:230px;">
                                         <div class = "subdiv">
                                                 <p class = "submenu" href="{% url 'inventory:medicine_add'%}" style="font-weight:bold;color:black;font-size:15px;">Inventory Menu</p>
                                                 
@@ -35,6 +35,18 @@
                                     <div class = "subdiv">
                                             <a class = "submenu" href="{% url 'inventory:equipment_list'%}">Equipment List View</a>
                                             <i class="list alternate icon "></i>
+                                    </div>
+                                    <div class = "subdiv">
+                                        <a class = "submenu" href="{% url 'inventory:medicine_inventory_list'%}">Medicine Inventory List View</a>
+                                        <i class="list alternate icon "></i>
+                                    </div>
+                                    <div class = "subdiv">
+                                        <a class = "submenu" href="{% url 'inventory:food_inventory_list'%}">Dog Food Inventory List View</a>
+                                        <i class="list alternate icon "></i>
+                                    </div>
+                                    <div class = "subdiv">
+                                        <a class = "submenu" href="{% url 'inventory:equipment_inventory_list'%}">Equipment Inventory List View</a>
+                                        <i class="list alternate icon "></i>
                                     </div>
                                    
                                 </div>
