--- a/profiles/templates/profiles/sidebar_pa.html
+++ b/profiles/templates/profiles/sidebar_pa.html
@@ -1,12 +1,17 @@
 {% extends "profiles/global-base-ui/sidebar_menu.html" %}  
 
 {% block sidebar_module %}
+
     <div class="pusher">
         <div class="ui basic segment">
-
               <div class="ui fluid container">
                     <div class="ui grid">
+
                         <div class="three wide column">
+                                                             <h1 class="ui header">
+  Planning and Acquiring
+  <div class="sub header"></div>
+</h1>
                                 <div class="ui pointing vertical menu">
 
 
@@ -17,7 +22,6 @@
       <a class="item" href="{% url 'planningandacquiring:K9_list'%}">K9 List View</a>
     </div>
   </div>
-
                                 </div>
                         </div>
                         <!>
