--- a/inventory/templates/inventory/equipment_inventory_count.html
+++ b/inventory/templates/inventory/equipment_inventory_count.html
@@ -13,18 +13,16 @@
 <table id="tabledata" class="ui celled table responsive nowrap" style="width:100%">
     <thead>
         <tr>
-            <th>Inventory</th>
-            <th>Qauntity</th>
+            <th>Quantity</th>
             <th>Date Counted</th>
-           
+            <th>Counted By</th>
         </tr>
     </thead>
         <tbody>
             {% for data in data %}
             <tr>
-                <td>{{ data.inventory }}</td>
                 <td>{{ data.quantity }}</td>
-                <td>{{ data.date_counted }}</td>
+                <td>{{ data.date_counted }}</td>    
             </tr>
             {% endfor %}
         </tbody>
