--- a/inventory/templates/inventory/food_inventory_list.html
+++ b/inventory/templates/inventory/food_inventory_list.html
@@ -22,11 +22,13 @@
         <tbody>
             {% for data in data %}
             <tr>
-                <td style="width:500px;" >{{ data.food }}</td>
+                <td style="width:500px;" >
+                    <a href="{% url 'inventory:food_inventory_count' data.id %}">{{ data.food }}</a>
+                </td>
                 <td>{{ data.food.foodtype }}</td>
                 <td>{{ data.quantity }}</td>
                 <td class="center aligned" style="width:100px;">
-                    <a href="#" style="margin-right:10px;">
+                    <a href="{% url 'inventory:food_count_form' data.id %}" style="margin-right:10px;">
                         <i class="teal list ol icon"></i>
                     </a>
                 </td>       
