--- a/inventory/templates/inventory/medicine_inventory_list.html
+++ b/inventory/templates/inventory/medicine_inventory_list.html
@@ -15,7 +15,7 @@
         <tr>
             <th>Medicine</th>
             <th>Dose</th>
-            <th>Qauntity</th>
+            <th>Quantity</th>
             <th></th>
         </tr>
     </thead>
@@ -23,12 +23,12 @@
             {% for data in data %}
             <tr>
                 <td style="width:500px;" >
-                    <a href="{% url 'inventory:medicine_inventory_count' data.id  %}"> {{ data.medicine }}</a>
+                    <a href="{% url 'inventory:medicine_inventory_count' data.id %}"> {{ data.medicine }}</a>
                 </td>
                 <td>{{ data.medicine.dosage }}</td>
                 <td>{{ data.quantity }}</td>
                 <td class="center aligned" style="width:100px;">
-                    <a href="#" style="margin-right:10px;">
+                    <a href="{% url 'inventory:medicine_count_form' data.id %}" style="margin-right:10px;">
                         <i class="teal list ol icon"></i>
                     </a>
                 </td>       
