--- a/profiles/templates/profiles/sidebar_um.html
+++ b/profiles/templates/profiles/sidebar_um.html
@@ -13,7 +13,7 @@
                                            
                                     </div>
                                     <div class = "subdiv">
-                                            <a class = "submenu" href="#">Subsection 1</a>
+                                            <a class = "submenu" href="{% url 'profiles:add_User_form'%}">Add User</a>
                                             <i class="bell icon"></i>
                                     </div>
                                     <div class = "subdiv">
