receive inventory supply

--- a/inventory/templates/inventory/food_inventory_list.html
+++ b/inventory/templates/inventory/food_inventory_list.html
@@ -31,6 +31,9 @@
                     <a href="{% url 'inventory:food_count_form' data.id %}" style="margin-right:10px;">
                         <i class="teal list ol icon"></i>
                     </a>
+                    <a href="{% url 'inventory:food_receive_form' data.id %}" style="margin-right:10px;">
+                        <i class="teal dolly flatbed icon"></i>
+                    </a>
                 </td>       
             </tr>
             {% endfor %}
