--- a/inventory/templates/inventory/medicine_count_form.html
+++ b/inventory/templates/inventory/medicine_count_form.html
@@ -31,16 +31,15 @@
 
                                 <div class="three fields">
                                     <div class="field">
-                                        <label>Physical Count</label>
+                                        <label>{{label}}</label>
                                         {{form.quantity}}
                                     </div>
                                     <div class="field"></div>
                                     <div class="field"></div>
                                 </div>
                               
-
                                 <div class="ui inverted right aligned segment" style="padding: 0px;">
-                                    <button class = "ui button green" type="submit" >{{ actiontype }}</button>
+                                    <button onclick="return confirm('Are you sure?')"  class = "ui button green" type="submit" >{{ actiontype }}</button>
                                 </div>
                             </form>
                         </div>
