--- a/inventory/templates/inventory/medicine_inventory_list.html
+++ b/inventory/templates/inventory/medicine_inventory_list.html
@@ -29,7 +29,10 @@
                 <td>{{ data.quantity }}</td>
                 <td class="center aligned" style="width:100px;">
                     <a href="{% url 'inventory:medicine_count_form' data.id %}" style="margin-right:10px;">
-                        <i class="teal list ol icon"></i>
+                        <i class="teal boxes icon"></i>
+                    </a>
+                    <a href="{% url 'inventory:medicine_receive_form' data.id %}" style="margin-right:10px;">
+                        <i class="teal dolly flatbed icon"></i>
                     </a>
                 </td>       
             </tr>
