--- a/profiles/templates/profiles/global-base-ui/global_base_ui.html
+++ b/profiles/templates/profiles/global-base-ui/global_base_ui.html
@@ -22,8 +22,8 @@
 </head>
 <body>
     <!--START OF TOP MENU-->
-    <div class="ui inverted top attached menu">
-        <a class="item" style="width: 175px;"><i class="sidebar icon"></i>Menu</a>
+    <div class="ui inverted top attached demo menu">
+        <a class="item" style="width: 175px;" id = "menu"><i class="sidebar icon"></i>Menu</a>
         <div class="right menu">
              
             <div class="topdiv">
@@ -71,7 +71,6 @@
                 list-style-type: none;
                 list-style-position: outside;
                 line-height: 1.14285714em;
-                table-layout: fixed;
                 font-size: 12px;
             }
             .submenu:hover{
