--- a/profiles/templates/profiles/sidebar_training.html
+++ b/profiles/templates/profiles/sidebar_training.html
@@ -12,12 +12,12 @@
                                             <a class = "submenu" href="#"  style="font-weight:bold;color:black;font-size:15px;">Training Menu</a>
                                     </div>
                                     <div class = "subdiv">
-                                            <a class = "submenu" href="#">Subsection 1</a>
-                                            <i class="bell icon"></i>
+                                            <a class = "submenu" href="{% url 'training:classify_k9_list'%}">Classify Dogs</a>
+                                            <i class="list alternate icon"></i>
                                     </div>
                                     <div class = "subdiv">
-                                            <a class = "submenu" href="#">Subsection 2</a>
-                                            <i class="bell icon"></i>
+                                            <a class = "submenu" href="{% url 'training:training_records'%}">Training Records</a>
+                                            <i class="folder open icon"></i>
                                     </div>
                                    
                                 </div>
